--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_CONNECTION_STRING=mongodb://localhost:27017/educonnect
+AUTH_SECRET=RHR8xkSWQbADEc4ZuQy6fIzMZrTAnreUM19kTG6r3CnjD6OrGuRA/PzXlDI=
