--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@react-email/render": "^1.3.2",
     "@stripe/stripe-js": "^8.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -38,6 +39,7 @@
     "react-day-picker": "^9.11.0",
     "react-dom": "^18",
     "react-hook-form": "^7.63.0",
+    "resend": "^6.1.2",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
