--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -25,9 +26,11 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@react-email/render": "^1.3.2",
     "@stripe/stripe-js": "^8.0.0",
+    "@tanstack/react-table": "^8.21.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.544.0",
@@ -38,7 +41,9 @@
     "react": "^18",
     "react-day-picker": "^9.11.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.63.0",
+    "react-quill": "^2.0.0",
     "resend": "^6.1.2",
     "sonner": "^2.0.7",
     "stripe": "^19.1.0",
