--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.63.0",
+    "react-player": "^3.3.3",
     "react-quill": "^2.0.0",
     "resend": "^6.1.2",
     "sonner": "^2.0.7",
