--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^5.2.2",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -38,6 +39,7 @@
     "next": "14.2.33",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-day-picker": "^9.11.0",
     "react-dom": "^18",
